<resources>
    <string name="app_name">Семейный бюджет</string>
    <string name="action_settings">Настройки</string>
    <string name="action_clear_planned_expenses">Удалить все планируемые расходы</string>
    <string name="action_clear_expenses">Удалить все расходы</string>
    <string name="action_clear_incomes">Удалить все доходы</string>
    <string name="title_activity_login">Войти</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_chooser">ChooserActivity</string>
    <string name="title_activity_application">ApplicationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="income_text">Доходы</string>
    <string name="expense_text">Расходы</string>
    <string name="statistics_text">Статистика</string>
    <string name="settings_text">Настройки</string>
    <string name="string_sort_alphabet">По алфавиту</string>
    <string name="string_sort_date">По дате</string>
    <string name="string_sort_sum">По сумме</string>
    <string name="string_sort_up">(по возрастанию)</string>
    <string name="string_sort_down">(по убыванию)</string>


    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="server_client_id">1040677390232-37dnad5d9hfh5b7qi8u0qs8bjcpc1uku.apps.googleusercontent.com</string>


    <string name="authorize">Требуется авторизация</string>
</resources>
