<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.artfonapps.familyinex.MainActivity">
    <item
        android:id="@+id/action_clear_planned_expenses"
        android:orderInCategory="100"
        android:title="@string/action_clear_planned_expenses"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_expenses"
        android:orderInCategory="100"
        android:title="@string/action_clear_expenses"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_incomes"
        android:orderInCategory="100"
        android:title="@string/action_clear_incomes"
        app:showAsAction="never" />
</menu>
